[metadata]
name = hooked
version = 0.0.1
author = Mario Baldi
author_email = mariobaldi.py@gmail.com
description = Pluggable event hooks library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baldimario/hooked
project_urls =
    Bug Tracker = https://github.com/baldimario/bsb/hooked/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires = 
    telepot
    kafka-python
    pyftpdlib

[options.packages.find]
where = src
